# nui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  ngl.c  ngl.h  nui.c  nui.h
.github/workflows/: testing.yaml
backends/ngl/: ngl.c  ngl.h
backends/sw/: stb_image_write.h  sw.c  sw.h
docs/: library-usage.md  simple-examples.md
nui/: nui.c  nui.h  nuiw.c  nuiw.h
tests/: layout_testing.h  sanity_blend_and_image_repeat.c  sanity_fixed_height_only.c  sanity_fixed_width_no_shrink.c  sanity_fixed_width_only.c  sanity_grow_across_all.c  sanity_grow_both.c  sanity_grow_height_only.c  sanity_grow_sandwich.c  sanity_grow_width_only.c  sanity_image_and_blend.c  sanity_loop.c  sanity_shrink_width.c  sanity_text_fit.c  sanity_text_with_color.c  sanity_text_wrap.c  sanity_text_wrap_measures_candidate_line.c  sanity_triple_grow_unfair.c  simple_child_gap.c  simple_element.c  simple_fit_left2right.c  simple_fit_top2bottom.c  simple_layout_left2right.c  simple_layout_top2bottom.c  simple_padding.c  simple_two_elements.c  testing.h  widget_behavior.c  widget_core_input.c  widget_styled_box_smoke.c
